string.isBlank()